[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-tool"
description = "Utility tool for orbits."
authors = [
    { name = "Joe Reed" }
]
requires-python = ">=3.10"
dynamic = [
    "version"
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
    "License :: MIT",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["*.tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --junitxml=.build/test_output.xml --cov=orbit_tool --cov-fail-under=80 --cov-report term --cov-report html:.build/test_cov_html --cov-report xml:.build/test-cov.xml"
pythonpath = [
  "src"
]
#testpaths = [
#    "tests",
#    "integration",
#]