[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-tool"
description = "Utility tool for orbits."
authors = [
    { name = "Joe Reed" }
]
requires-python = ">=3.10"
dynamic = [
    "version"
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "astropy == 5.1",
    "czml3 == 0.7.0",
    "isodate == 0.6.1",
    "matplotlib == 3.6.1",
    "orekit == 11.2",
    "pandas == 1.5.1",
    "pyyaml == 6.0",
    "requests == 2.28.1",
    "geopy == 2.0.0",
    "py-rebar >= 0.2.0",
    "orekit-factory ~= 0.2.0"
]

[project.urls]
homepage = "https://github.com/greyskyy/orbit-tool"
repository = "https://github.com/greyskyy/orbit-tool"

[tool.setuptools_scm]
# Empty section enables setuptools_scm

[project.scripts]
"orbit-tool" = "orbit_tool.runner:run"

[project.entry-points."orbittool.preinit"]
orekit = "orekitfactory.hooks:pre_init"
"config-args" = "orbit_tool.configuration:add_args"

[project.entry-points."orbittool.postinit"]
orekit = "orekitfactory.hooks:post_init"
"config-load" = "orbit_tool.configuration:load_config"

[project.entry-points."orbittool.app"]
"check-tle" = "orbit_tool.apps.checktle"
"compare-orbits" = "orbit_tool.apps.compare_orbits"
convert = "orbit_tool.apps.convert"
"draw-orbit" = "orbit_tool.apps.draw_orbit"
"verify-astropy" = "orbit_tool.apps.verify_astropy"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["*.tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --junitxml=.build/test_output.xml --cov=orbit_tool --cov-fail-under=80 --cov-report term --cov-report html:.build/test_cov_html --cov-report xml:.build/test-cov.xml"
pythonpath = [
  "src"
]
#testpaths = [
#    "tests",
#    "integration",
#]